2007-03-31  Mitz Pettel  <mitz@webkit.org>

        Reviewed by Darin.

        - http://bugs.webkit.org/show_bug.cgi?id=13214

        A layout test documenting shrink-to-fit width calculation for floating elements.

        * fast/block/float/shrink-to-fit-width-expected.checksum: Added.
        * fast/block/float/shrink-to-fit-width-expected.png: Added.
        * fast/block/float/shrink-to-fit-width-expected.txt: Added.
        * fast/block/float/shrink-to-fit-width.html: Added.

2007-03-31  Nicholas Shanks  <webkit@nickshanks.com>

        Reviewed by Adele.

        http://bugs.webkit.org/show_bug.cgi?id=13184
        HTMLImageElement longdesc should be complete resolved URL

        * fast/dom/HTMLImageElement/image-longdesc-absolute-url-expected.txt: Added.
        * fast/dom/HTMLImageElement/image-longdesc-absolute-url.html: Added.

2007-03-31  Mitz Pettel  <mitz@webkit.org>

        Reviewed by Hyatt.

        - repaint test for http://bugs.webkit.org/show_bug.cgi?id=13209
          REGRESSION (r18756-18765): Incomplete list marker repaint when resizing list item

        * fast/repaint/list-marker-2-expected.checksum: Added.
        * fast/repaint/list-marker-2-expected.png: Added.
        * fast/repaint/list-marker-2-expected.txt: Added.
        * fast/repaint/list-marker-2.html: Added.

2007-03-31  Mitz Pettel  <mitz@webkit.org>

        Reviewed by Hyatt.

        - test for http://bugs.webkit.org/show_bug.cgi?id=13178
          Helvetica zero-width space has non-zero width

        * fast/text/wide-zero-width-space-expected.checksum: Added.
        * fast/text/wide-zero-width-space-expected.png: Added.
        * fast/text/wide-zero-width-space-expected.txt: Added.
        * fast/text/wide-zero-width-space.html: Added.

2007-03-31  Mitz Pettel  <mitz@webkit.org>

        Reviewed by Darin.

        - test and updates for http://bugs.webkit.org/show_bug.cgi?id=8016
          REPRO: Safari hangs loading 18 MB page (deeply nested DOM tree)
