@@ -1,0 +1,33 @@
+layer at (0,0) size 800x600
+  RenderView at (0,0) size 800x600
+layer at (0,0) size 800x600
+  RenderBlock {HTML} at (0,0) size 800x600
+    RenderBody {BODY} at (8,8) size 784x584
+      RenderBlock {P} at (0,0) size 784x18
+        RenderText {#text} at (0,0) size 107x18
+          text run at (0,0) width 107: "Test for revision "
+        RenderInline {A} at (0,0) size 48x18 [color=#0000EE]
+          RenderText {#text} at (107,0) size 48x18
+            text run at (107,0) width 48: "#20574"
+        RenderText {#text} at (155,0) size 4x18
+          text run at (155,0) width 4: "."
+      RenderBlock {P} at (0,34) size 784x18
+        RenderText {#text} at (0,0) size 251x18
+          text run at (0,0) width 251: "The two blue boxes should be identical."
+      RenderBlock {DIV} at (0,68) size 106x42 [border: (3px solid #0000FF)]
+        RenderText {#text} at (3,3) size 10x18
+          text run at (3,3) width 10: "L"
+        RenderInline {SPAN} at (0,0) size 40x18 [color=#008000] [bgcolor=#FFFF00]
+          RenderText {#text} at (13,3) size 40x18
+            text run at (13,3) width 40: "o r"
+        RenderText {#text} at (53,3) size 100x36
+          text run at (53,3) width 50: "e mi"
+          text run at (3,21) width 67: "psumdolor"
+      RenderBlock (anonymous) at (0,110) size 784x18
+        RenderBR {BR} at (0,0) size 0x18
+      RenderBlock {DIV} at (0,128) size 106x42 [border: (3px solid #0000FF)]
+        RenderText {#text} at (3,3) size 100x36
+          text run at (3,3) width 100: "Lo re mi"
+          text run at (3,21) width 67: "psumdolor"
+selection start: position 1 of child 0 {#text} of child 8 {DIV} of child 1 {BODY} of child 0 {HTML} of document
+selection end:   position 4 of child 0 {#text} of child 8 {DIV} of child 1 {BODY} of child 0 {HTML} of document
